# amaxa

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.rst  example-credentials.yml  example.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-plan.md  testing-requirements.txt
.github/workflows/: feature.yml  pr.yml  publish.yml
amaxa/: __init__.py  __main__.py  amaxa.py  api.py  constants.py  integration_test.py  jwt_auth.py  loader.py  mapper_cache.py  state.py  test.py  test_amaxa.py  test_cli.py  test_end_to_end.py  test_integration.py  test_loader.py  test_transforms.py  transforms.py
amaxa/loader/: __init__.py  core.py  core_loader.py  credentials.py  extract_operation.py  input_type.py  load_operation.py  schemas.py  state.py
amaxa/loader/core/: __init__.py  core.py  input_type.py  schemas.py
amaxa/test/: MockConnection.py  MockFileStore.py  MockSimpleSalesforce.py  test_Connection.py  test_CredentialLoader.py  test_DataMapper.py  test_ExtractOperation.py  test_ExtractionOperationLoader.py  test_ExtractionStep.py  test_ExtractionStep_high_volume.py  test_FileStore.py  test_LoadOperation.py  test_LoadOperationLoader.py  test_LoadStep.py  test_Loader.py  test_Operation.py  test_OperationLoader.py  test_SalesforceId.py  test_StateLoader.py  test_Step.py  test_cli.py  test_end_to_end.py  test_integration.py  test_integration_high_volume.py  test_iterators.py  test_load_credentials.py  test_load_extraction_operation.py  test_load_load_operation.py  test_transforms.py
amaxa/test_org/: IntegrationTest.py  test_end_to_end.py  test_integration.py  test_integration_high_volume.py
assets/: project-scratch-def.json  server.key.enc
assets/scratch_orgs/config/: project-scratch-def.json
assets/scratch_orgs/force-app/main/default/objects/Account/recordTypes/: Commercial.recordType-meta.xml  Government.recordType-meta.xml
assets/scratch_orgs/force-app/main/default/profiles/: Admin.profile-meta.xml
assets/scripts/: UpdateUser.apex  get-auth-params.sh  prep-scratch-org.sh  publish-version.sh  remove-junk-records.apex
assets/test_data_bulk/: Account.csv  about.md  test.yml
assets/test_data_csv/: Account.csv  Campaign.csv  Contact.csv  Lead.csv  Opportunity.csv  OpportunityContactRole.csv  RecordType.mapping.csv  User.mapping.csv  about.md  credentials.yml  test.yml
assets/test_data_sfdx/: Account-Contact-plan.json  Accounts.json  Contacts.json  about.md  credentials.yml  test.yml
assets/test_data_transforms/: Account.csv  about.md  credentials-env.yml  credentials-sfdx.yml  example_transforms.py  test.yml  test_transforms.py
assets/test_describes/: Account.json  Attachment.json  Contact.json  Opportunity.json  Task.json  sobjects.json
docs/: api.rst  conf.py  credentials.rst  errors.rst  examples.rst  index.rst  install.rst  limits.rst  operations.rst  references.rst  running.rst  transforms.rst  validation.rst
test/test_org/: IntegrationTest.py  test_end_to_end.py  test_integration.py  test_integration_high_volume.py
test/test_unit/: MockConnection.py  MockFileStore.py  test_Connection.py  test_CredentialLoader.py  test_DataMapper.py  test_ExtractOperation.py  test_ExtractionOperationLoader.py  test_ExtractionStep.py  test_FileStore.py  test_LoadOperation.py  test_LoadOperationLoader.py  test_LoadStep.py  test_Loader.py  test_Operation.py  test_OperationLoader.py  test_SalesforceId.py  test_StateLoader.py  test_Step.py  test_cli.py  test_iterators.py  test_schemas.py  test_transforms.py
test_data/: Accounts.json
