[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "amaxa"
version = "0.9.7"
description = "Load and extract data from multiple Salesforce objects in a single operation, preserving links and network structure."
license = "BSD-3-Clause"
authors = ["David Reed <david@ktema.org>"]
readme = "README.rst"
homepage = "https://github.com/davidmreed/amaxa"
repository = "https://github.com/davidmreed/amaxa"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]
packages = [{ include = "amaxa" }]

[tool.poetry.scripts]
amaxa = 'amaxa.__main__:main'


[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^35.0.0"
requests = {version = "^2.26.0", extras = ["security"]}
simple-salesforce = "^1.11.4"
PyYAML = "^5.4.1"
PyJWT = "^2.1.0"
Cerberus = "^1.3.4"
salesforce-bulk = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
Sphinx = "^4.2.0"
pyinstaller = "^4.5.1"
pefile = "^2021.9.3"
macholib = "^1.15.2"
pywin32-ctypes = "^0.2.0"
importlib-resources = "^5.2.2"
tox = "^3.24.4"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39
isolated_build = true

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --junitxml=test-reports/junit-{envname}.xml --cov-config pytest.ini --cov-append  --cov=amaxa {posargs:test}
passenv = INSTANCE_URL ACCESS_TOKEN
"""

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.autohooks]
pre-commit = ["autohooks.plugins.isort", "autohooks.plugins.black"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
